# serializer version: 1
# name: TestDifficalcyCatchDifficultyCalculator.test_calculate_scores
  list([
    Calculation(
      difficulty_values=dict({
        'total': 5.560488609256414,
      }),
      performance_values=dict({
        'total': 252.12070440587385,
      }),
    ),
  ])
# ---
# name: TestDifficalcyCatchDifficultyCalculator.test_get_beatmap_details
  BeatmapDetails(
    artist='Unknown',
    author='Unknown Creator',
    base_velocity=1.6,
    common_bpm=120,
    difficulty_name='Normal',
    difficulty_settings=dict({
      'approach_rate': 8.3,
      'circle_size': 4,
      'drain_rate': 5,
    }),
    hitobject_counts=dict({
      'banana_showers': 3,
      'fruits': 78,
      'juice_streams': 12,
    }),
    length=45250,
    max_combo=127,
    maximum_bpm=120,
    mininum_bpm=120,
    tick_rate=1,
    title='Unknown',
  )
# ---
# name: TestDifficalcyDifficultyCalculator.test_calculate_scores
  list([
    Calculation(
      difficulty_values=dict({
        'aim': 3.1001372651417562,
        'flashlight': 0,
        'speed': 3.2200802624048364,
        'total': 6.48283986401029,
      }),
      performance_values=dict({
        'accuracy': 83.9838091927015,
        'aim': 131.8212815664092,
        'flashlight': 0,
        'speed': 138.06664881331807,
        'total': 365.87508718883106,
      }),
    ),
    Calculation(
      difficulty_values=dict({
        'aim': 3.5593526086539664,
        'flashlight': 0,
        'speed': 3.446319988670145,
        'total': 7.185090035860263,
      }),
      performance_values=dict({
        'accuracy': 160.712520330394,
        'aim': 200.14707721575004,
        'flashlight': 0,
        'speed': 173.1858648513255,
        'total': 551.1783642025379,
      }),
    ),
    Calculation(
      difficulty_values=dict({
        'aim': 3.5593526086539664,
        'flashlight': 0,
        'speed': 3.446319988670145,
        'total': 7.185090035860263,
      }),
      performance_values=dict({
        'accuracy': 205.62929602393217,
        'aim': 227.68665492715283,
        'flashlight': 0,
        'speed': 206.36349680141984,
        'total': 659.9971793177803,
      }),
    ),
    Calculation(
      difficulty_values=dict({
        'aim': 3.3381188143323404,
        'flashlight': 0,
        'speed': 2.0061675598571997,
        'total': 5.849595805249367,
      }),
      performance_values=dict({
        'accuracy': 12.368997155942548,
        'aim': 53.881021372712006,
        'flashlight': 0,
        'speed': 6.562817168421105,
        'total': 77.79652849596229,
      }),
    ),
  ])
# ---
# name: TestDifficalcyDifficultyCalculator.test_context_manager
  list([
    Calculation(
      difficulty_values=dict({
        'aim': 2.1637224075981187,
        'flashlight': 0,
        'speed': 2.174461378401703,
        'total': 4.447966206106835,
      }),
      performance_values=dict({
        'accuracy': 36.07670429437059,
        'aim': 49.63847047214548,
        'flashlight': 0,
        'speed': 50.40034907162279,
        'total': 140.5757695504661,
      }),
    ),
  ])
# ---
# name: TestDifficalcyManiaDifficultyCalculator.test_calculate_scores
  list([
    Calculation(
      difficulty_values=dict({
        'total': 2.797245912537965,
      }),
      performance_values=dict({
        'difficulty': 43.17076331130473,
        'total': 21.585381655652366,
      }),
    ),
  ])
# ---
# name: TestDifficalcyManiaDifficultyCalculator.test_get_beatmap_details
  BeatmapDetails(
    artist='Unknown',
    author='Unknown Creator',
    base_velocity=1.6,
    common_bpm=120,
    difficulty_name='Normal',
    difficulty_settings=dict({
      'accuracy': 7,
      'drain_rate': 5,
      'key_count': 4,
    }),
    hitobject_counts=dict({
      'hold_notes': 14,
      'notes': 123,
    }),
    length=30500,
    max_combo=151,
    maximum_bpm=120,
    mininum_bpm=120,
    tick_rate=1,
    title='Unknown',
  )
# ---
# name: TestDifficalcyOsuDifficultyCalculator.test_calculate_scores
  list([
    Calculation(
      difficulty_values=dict({
        'aim': 3.1001372651417562,
        'flashlight': 0,
        'speed': 3.2200802624048364,
        'total': 6.48283986401029,
      }),
      performance_values=dict({
        'accuracy': 83.9838091927015,
        'aim': 131.8212815664092,
        'flashlight': 0,
        'speed': 138.06664881331807,
        'total': 365.87508718883106,
      }),
    ),
  ])
# ---
# name: TestDifficalcyOsuDifficultyCalculator.test_get_beatmap_details
  BeatmapDetails(
    artist='senya',
    author='Satellite',
    base_velocity=1.7,
    common_bpm=138,
    difficulty_name='Marathon',
    difficulty_settings=dict({
      'accuracy': 6,
      'approach_rate': 8,
      'circle_size': 4,
      'drain_rate': 5,
    }),
    hitobject_counts=dict({
      'circles': 1093,
      'slider_ticks': 346,
      'sliders': 659,
      'spinners': 1,
    }),
    length=678047,
    max_combo=2758,
    maximum_bpm=168,
    mininum_bpm=121,
    tick_rate=2,
    title='Songs Compilation',
  )
# ---
# name: TestDifficalcyPerformancePlusDifficultyCalculator.test_calculate_scores
  list([
    Calculation(
      difficulty_values=dict({
        'accuracy': 1.0546478295311437,
        'aim': 2.8804685309467284,
        'flowAim': 1.6727417520197583,
        'jumpAim': 2.8763118223866133,
        'precision': 1.714528074416766,
        'speed': 3.179656468968935,
        'stamina': 2.8045880770770752,
        'total': 6.123075221732318,
      }),
      performance_values=dict({
        'accuracy': 87.89378488351228,
        'aim': 68.38232334186907,
        'flowAim': 13.391867347855435,
        'jumpAim': 68.08670955755021,
        'precision': 14.420763347653594,
        'speed': 99.53445865488443,
        'stamina': 68.30305130767819,
        'total': 259.5756907401086,
      }),
    ),
  ])
# ---
# name: TestDifficalcyPerformancePlusDifficultyCalculator.test_get_beatmap_details
  BeatmapDetails(
    artist='senya',
    author='Satellite',
    base_velocity=1.7,
    common_bpm=138,
    difficulty_name='Marathon',
    difficulty_settings=dict({
      'accuracy': 6,
      'approach_rate': 8,
      'circle_size': 4,
      'drain_rate': 5,
    }),
    hitobject_counts=dict({
      'circles': 1093,
      'slider_ticks': 346,
      'sliders': 659,
      'spinners': 1,
    }),
    length=678047,
    max_combo=2758,
    maximum_bpm=168,
    mininum_bpm=121,
    tick_rate=2,
    title='Songs Compilation',
  )
# ---
# name: TestDifficalcyTaikoDifficultyCalculator.test_calculate_scores
  list([
    Calculation(
      difficulty_values=dict({
        'colour': 0.6951266267061921,
        'rhythm': 0.04175786247321183,
        'stamina': 2.922552311867991,
        'total': 4.624425677633868,
      }),
      performance_values=dict({
        'accuracy': 228.4580498546157,
        'difficulty': 119.856401138518,
        'total': 348.3144509931337,
      }),
    ),
  ])
# ---
# name: TestDifficalcyTaikoDifficultyCalculator.test_get_beatmap_details
  BeatmapDetails(
    artist='Unknown',
    author='Unknown Creator',
    base_velocity=1.6,
    common_bpm=120,
    difficulty_name='Normal',
    difficulty_settings=dict({
      'accuracy': 7,
      'drain_rate': 5,
    }),
    hitobject_counts=dict({
      'drum_rolls': 30,
      'hits': 200,
      'swells': 8,
    }),
    length=53000,
    max_combo=200,
    maximum_bpm=120,
    mininum_bpm=120,
    tick_rate=1,
    title='Unknown',
  )
# ---
